# signal-messenger-vector-database

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  docker-compose_aarch64.yaml  docker-compose_darwin.yaml
src/: lib.rs  main.rs  types.rs
src/rag/: dataframes.rs  mod.rs  prompt_template.rs  questions.rs  sqlx.rs
src/signal/: attachments_dir.rs  format.rs  format_message.rs  mod.rs  process_incoming_message.rs  receive.rs  send.rs  upload_attachments.rs
